# CONTEXT-WINDOW-LABS

./: .env.example  .gitignore  PRD.md  README.md  UML.md  context_window_labs.py  pyproject.toml  requirements.txt  run_all_tests.py
azure_openai_helper/: __init__.py  llm_client.py
azure_openai_helper/tests/: README.md  __init__.py
lab1/: PROMPT_LOG.md  README.md  __init__.py  analyze_results.py  debug_phi4_context.py  diagnose_phi4_limit.py  experiment.py  generate_data.py  run_lab.py  run_trial2.py  run_trial3.py  run_trial4.py  run_trial5.py  run_trial5_4000w.py  run_trial5_final.py  run_trial5_fixed.py
lab1/results-trial4/: analysis_report_phi4.txt
lab2/: PROMPT_LOG.md  README.md  __init__.py  analyze_phi_results.py  analyze_results.py  experiment.py  experiment_log.txt  generate_cities.py  generate_countries.py  generate_documents.py  generate_tech_companies.py
lab3/: PROMPT_LOG.md  README.md  __init__.py  analyze_results.py  experiment.py  generate_documents.py  run_lab.py
lab3/results/: analysis_report.txt
lab4/: PROMPT_LOG.md  README.md  __init__.py  analyze_results.py  experiment.py  generate_scenario.py  run_lab.py  strategies.py  verify_setup.py
lab4/results/: analysis_report.txt
tests/: README.md  __init__.py  test_installation.py  test_package.py  test_quick_start.py
